<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kawinpart.sorasak.buybakery.MainActivity"
    android:background="@drawable/orange_bicycle">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SignIn"
            android:id="@+id/button"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SignUp"
            android:id="@+id/button2"
            android:layout_weight="1"
            android:onClick="clickSignUpMain" />
    </LinearLayout>

    <ImageView
        android:layout_width="@dimen/icon"
        android:layout_height="@dimen/icon"
        android:id="@+id/imageView"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/bicycle_live_wallpaper" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageView"
        android:background="#82ffffff"
        android:padding="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtUser"
            android:hint="@string/user" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtPassword"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ResetId"
            android:id="@+id/textView6"
            android:hint="@string/ResetId"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/h2" />
    </LinearLayout>
</RelativeLayout>
