<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kawinpart.sorasak.buybakery.SignUpActivity"
    android:background="@drawable/wall13">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:id="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/h1"
        android:textStyle="bold"
        android:textColor="@color/text" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SignUp"
        android:id="@+id/button3"
        android:layout_alignParentBottom="true"
        android:onClick="clickSignUpSign" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_below="@+id/textView"
        android:layout_above="@+id/button3"
        android:layout_margin="15dp" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#82ffffff"
            android:padding="15dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:id="@+id/textView2"
                    android:layout_weight="1"
                    android:textSize="@dimen/h2"
                    android:textColor="@color/text" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText"
                    android:layout_weight="2"
                    android:textColor="@color/text" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/user"
                    android:id="@+id/textView3"
                    android:layout_weight="1"
                    android:textSize="@dimen/h2"
                    android:textColor="@color/text" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText2"
                    android:layout_weight="2"
                    android:textColor="@color/text" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:id="@+id/textView4"
                    android:layout_weight="1"
                    android:textSize="@dimen/h2"
                    android:textColor="@color/text" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText3"
                    android:layout_weight="2"
                    android:textColor="@color/text" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id_card"
                    android:id="@+id/textView5"
                    android:layout_weight="1"
                    android:textSize="@dimen/h2"
                    android:textColor="@color/text" />

                <EditText
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText4"
                    android:layout_weight="1"
                    android:layout_gravity="right"
                    android:textColor="@color/text" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
